Update Menu links and items

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -11,7 +11,7 @@
           <h2 class="uq-footer__navigation-title">Media</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
@@ -25,7 +25,7 @@
           <h2 class="uq-footer__navigation-title">Staff</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
+              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
@@ -34,10 +34,10 @@
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
             </li>
           </ul>
         </li>
@@ -57,7 +57,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
             </li>
           </ul>
         </li>
@@ -67,25 +67,34 @@
             <li class="uq-footer__navigation-item">
               <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
             </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+            </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+            </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+            </li>
           </ul>
         </li>
         <li class="uq-footer__navigation-item">
           <h2 class="uq-footer__navigation-title">Contact</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
+              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">UQ contact</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
+              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campus maps and transport</a>
             </li>
           </ul>
         </li>
@@ -93,13 +102,13 @@
     </nav>
 
     <!-- Mobile Footer Navigation-->
-    <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
+    <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation">
       <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
         <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
           <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
@@ -113,7 +122,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle">Staff</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
+              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
@@ -122,10 +131,10 @@
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://support.staff.uq.edu.au/" class="uq-footer__navigation-link">Staff Supoort</a>
+              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT Supoort for staff</a>
+              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
             </li>
           </ul>
         </li>
@@ -145,7 +154,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT Supoort for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
             </li>
           </ul>
         </li>
@@ -155,25 +164,34 @@
             <li class="uq-footer__navigation-item">
               <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
             </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+            </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+            </li>
+            <li class="uq-footer__navigation-item">
+              <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+            </li>
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
           <button class="uq-accordion__toggle uq-footer__navigation-toggle">Contact</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
+              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">UQ contact</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/unit_types.html" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://maps.uq.edu.au" class="uq-footer__navigation-link">Campus maps and transport</a>
+              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campus maps and transport</a>
             </li>
           </ul>
         </li>
@@ -206,13 +224,13 @@
               <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
+            <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
+              <a href="https://governance-risk.uq.edu.au/functions-and-services/right-information-and-privacy/right-information" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
-            <a href="https://uq.edu.au/contacts" class="uq-footer__link">Feedback</a>
+            <a href="https://my.uq.edu.au/feedback?r=" class="uq-footer__link">Feedback</a>
           </li>
       </ul>
        </nav>
