--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -120,7 +120,7 @@
       //border-bottom: 1px solid $nav-dropdown-divider;
       color: core.$uq-purple;
       display: block;
-      padding: core.$space core.$space 1.25rem;
+      padding: core.$space core.$space;
       text-decoration: none;
       transition: background-color .25s, border-color .25s;
 
@@ -140,6 +140,10 @@
         //border-bottom: 4px solid #fff;
       }
     }
+    
+    &__list-link {
+      border-bottom: 4px solid transparent;
+    }  
 
     &__list {
       list-style-type: none;
@@ -255,10 +259,9 @@
             }
           }
         }
-
+        
         &:hover {
           & .uq-site-header__navigation__list-link {
-            padding-bottom: core.$space;
             border-bottom: 4px solid core.$uq-purple;
           }
         }
