--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -252,7 +252,7 @@
     transition: background-color .25s,border-color .25s;
     font-weight: 400;
     position: relative;
-    border-bottom: 4px solid core.$uq-purple;
+    border-bottom: 4px solid transparent;
 
     &:hover {
       color: core.$uq-white;
