Updated events typo.

--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -364,7 +364,7 @@
           <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
       </li>
       <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-          <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
+          <a href="https://www.uq.edu.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
       </li>
       <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
           <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
@@ -398,7 +398,7 @@
               <a href="https://www.uq.edu.au/news/" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-              <a href="https://www.uq.ed.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
+              <a href="https://www.uq.edu.au/uq-events" class="uq-header__nav-secondary-link">Events</a>
           </li>
           <li class="uq-header__nav-secondary-item">
               <a href="https://alumni.uq.edu.au/giving" class="uq-header__nav-secondary-link">Give</a>
