improve js handling megamenu

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -199,34 +199,15 @@
       align-items: center;
       flex-direction: row;
     }
-
-
-    
-
-    // & li {
-    //   margin: 0;
-    //   padding-right: 2rem;
-
-    //   &:hover {
-    //     & > .uq-header__megamenu {
-    //       height: auto;
-    //       visibility: visible;
-    //     }
-
-    //     & .uq-header__nav-primary-link {
-    //       border-bottom: 4px solid white;
-    //     }
-    //   }
-
-    //   & .uq-header__nav-primary-link--active {
-    //     border-bottom: 4px solid white;
-    //   }
-    // }
   }
 
   &__nav-primary-item {
     margin: 0;
-    padding-right: 2rem;
+    padding-left: 2rem;
+
+    &:first-child {
+      padding-left: 0;
+    }
 
     &--is-open {
       & > .uq-header__megamenu {
