Fixed spelling of support

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -34,10 +34,10 @@
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
             </li>
           </ul>
         </li>
@@ -57,7 +57,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
             </li>
           </ul>
         </li>
@@ -131,10 +131,10 @@
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff supoort</a>
+              <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing/mental-health" class="uq-footer__navigation-link">Staff support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT supoort for staff</a>
+              <a href="https://staff.uq.edu.au/information-and-services/information-technology/it-support" class="uq-footer__navigation-link">IT support for staff</a>
             </li>
           </ul>
         </li>
@@ -154,7 +154,7 @@
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT supoort for students</a>
+              <a href="https://my.uq.edu.au/information-and-services/information-technology/student-it-support" class="uq-footer__navigation-link">IT support for students</a>
             </li>
           </ul>
         </li>
