Fix incorrect nav to div

--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -18,7 +18,7 @@
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Study with us</div>
-                    <nav class="megamenu__menu">
+                    <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://study.uq.edu.au/study-options/programs ">Find a course or program</a></li>
                         <li><a href="https://study.uq.edu.au/study-options">Browse study areas</a></li>
@@ -69,7 +69,7 @@
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Our research</div>
-                    <nav class="megamenu__menu">
+                    <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://research.uq.edu.au/news/impact">Research impacts</a></li>
                         <li><a href="https://research.uq.edu.au/research-support">Reseach support, integrity and ethics</a></li>
@@ -83,7 +83,7 @@
                   </div>
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Graduate research</div>
-                    <nav class="megamenu__menu">
+                    <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://graduate-school.uq.edu.au/">Research degrees (including PhDs)</a></li>
                         <li><a href="https://researchers.uq.edu.au/">Find a supervisor</a></li>
@@ -181,7 +181,7 @@
                   </div>
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Working at UQ</div>
-                    <nav class="megamenu__menu">
+                    <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://careers.uq.edu.au/">Careers at UQ</a></li>
                         <li><a href="https://careers.uq.edu.au/search-jobs">Jobs search</a></li>
