Menu changes and fixes

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="uq-footer__container">
-    <nav class="uq-footer__navigation uq-footer--desktop">
+    <nav class="uq-footer__navigation uq-footer--desktop"  aria-label="footer navigation">
       <ul class="uq-footer__navigation-list uq-footer__navigation-level-1">
         <li class="uq-footer__navigation-item uq-footer__navigation--is-open">
           <h2 class="uq-footer__navigation-title">Media</h2>
@@ -22,7 +22,7 @@
           </ul>
         </li>
         <li class="uq-footer__navigation-item">
-          <h2 class="uq-footer__navigation-title">Staff</h2>
+          <h2 class="uq-footer__navigation-title">Working at UQ</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
@@ -48,7 +48,7 @@
               <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -82,7 +82,7 @@
           <h2 class="uq-footer__navigation-title">Contact</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">UQ contact</a>
+              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
@@ -94,7 +94,7 @@
               <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campus maps and transport</a>
+              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -102,7 +102,7 @@
     </nav>
 
     <!-- Mobile Footer Navigation-->
-    <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation" aria-label="footer navigation mobile">
+    <nav class="uq-footer__navigation uq-footer--mobile" aria-label="footer navigation mobile">
       <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
         <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
@@ -145,7 +145,7 @@
               <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Program and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -179,7 +179,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">UQ contact</a>
+              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
@@ -191,7 +191,7 @@
               <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campus maps and transport</a>
+              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -199,11 +199,11 @@
     </nav>
     <!-- Footer contact details -->
     <div class="uq-footer__contact">   
-      <nav class="uq-footer__contact-item" aria-label="Social Media">
-        <ul class="uq-footer__footer-list uq-footer__contact-social" data-gtm-category="Social share link"> 
+      <nav class="uq-footer__contact-item" aria-label="Social Media" data-gtm-category="Social share link">
+        <ul class="uq-footer__footer-list uq-footer__contact-social"> 
           <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Facebook" data-gtm-label="Facebook"></a></li> 
           <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
-          <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"s aria-label="Twitter" data-gtm-label="Twitter"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Twitter" data-gtm-label="Twitter"></a></li>
           <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
           <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
         </ul>
@@ -218,16 +218,16 @@
         <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
       </ul>
     </nav>
-    <nav class="uq-footer__footer" aria-label="Term and conditions">
+    <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
+              <a href="https://www.uq.edu.au/legal/terms-of-use/" class="uq-footer__link">Privacy and terms of use</a>
           </li>
           <li class="uq-footer__footer-item">
             <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://governance-risk.uq.edu.au/functions-and-services/right-information-and-privacy/right-information" class="uq-footer__link">Right to information</a>
+              <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
             <a href="https://my.uq.edu.au/feedback?r=" class="uq-footer__link">Feedback</a>
