--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -50,7 +50,7 @@
                         <li><a href="https://study.uq.edu.au/high-school-students ">High school students</a></li>
                         <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
-                        <li><a href="https://atsis.uq.edu.au/future-students#">Aboriginal and Torres Strait Islander students</a></li>
+                        <li><a href="https://atsis.uq.edu.au/future-students">Aboriginal and Torres Strait Islander students</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
                         <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
@@ -126,9 +126,9 @@
                     <div class="megamenu__heading">Our communities</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://alumni.uq.edu.au/#">Alumni community</a></li>
+                        <li><a href="https://alumni.uq.edu.au/">Alumni community</a></li>
                         <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
-                        <li><a href="https://atsis.uq.edu.au/#">Indigenous engagement</a></li>
+                        <li><a href="https://atsis.uq.edu.au/">Indigenous engagement</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
                         <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
@@ -238,7 +238,7 @@
               <li><a href="https://study.uq.edu.au/high-school-students ">High school students</a></li>
               <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
               <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
-              <li><a href="https://atsis.uq.edu.au/future-students#">Aboriginal and Torres Strait Islander students</a></li>
+              <li><a href="https://atsis.uq.edu.au/future-students">Aboriginal and Torres Strait Islander students</a></li>
               <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
               <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
@@ -303,9 +303,9 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our communities</a>
             <ul>
-              <li><a href="https://alumni.uq.edu.au/#">Alumni community</a></li>
+              <li><a href="https://alumni.uq.edu.au/">Alumni community</a></li>
               <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
-              <li><a href="https://atsis.uq.edu.au/#">Indigenous engagement</a></li>
+              <li><a href="https://atsis.uq.edu.au/">Indigenous engagement</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
               <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
