--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -11,7 +11,7 @@
     <div class="uq-header__nav-primary" data-gtm-category="Primary header">
       <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
         <ul class="uq-header__nav-primary-list">
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au/">Study</a>
+          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au/">Study</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://study.uq.edu.au/" class="megamenu__overview-link">Study overview</a>
@@ -26,7 +26,7 @@
                         <li><a href="https://study.uq.edu.au/admissions">How to apply</a></li>
                         <li><a href="https://scholarships.uq.edu.au/">Scholarships</a></li>
                         <li><a href="https://my.uq.edu.au/starting-at-uq">Starting at UQ</a></li>
-                        <li><a href="https://study.uq.edu.au/contact-us">Contact</a></li>
+                        <li><a href="https://study.uq.edu.au/contact">Contact</a></li>
                       </ul>
                     </div>
                   </div>
@@ -37,7 +37,7 @@
                         <li><a href="https://study.uq.edu.au/why-choose-uq">Why choose UQ</a></li>
                         <li><a href="https://employability.uq.edu.au/get-the-edge">Enhance your employability</a></li>
                         <li><a href="https://study.uq.edu.au/university-life">Life at UQ and accommodation</a></li>
-                        <li><a href="https://campuses.uq.edu.au/">Campuses, maps & transport</a></li>
+                        <li><a href="https://campuses.uq.edu.au/">Campuses, maps and transport</a></li>
                         <li><a href="https://study.uq.edu.au/events">Events for prospective students</a></li>
                       </ul>
                     </div>
@@ -51,7 +51,7 @@
                         <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
                         <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
                         <li><a href="https://atsis.uq.edu.au/future-students">Aboriginal and Torres Strait Islander students</a></li>
-                        <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
+                        <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study abroad and exchange students</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
                         <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
                         <li><a href="https://my.uq.edu.au/">Current students</a></li>
@@ -62,7 +62,7 @@
               </div>
           </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
+          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/">Research</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://research.uq.edu.au/" class="megamenu__overview-link">Research overview</a>
@@ -71,8 +71,8 @@
                     <div class="megamenu__heading">Our research</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://research.uq.edu.au/news/impact">Research impacts</a></li>
-                        <li><a href="https://research.uq.edu.au/research-support">Reseach support, integrity and ethics</a></li>
+                        <li><a href="https://research.uq.edu.au/news/impact">Research impact</a></li>
+                        <li><a href="https://research.uq.edu.au/research-support">Research support, integrity and ethics</a></li>
                         <li><a href="https://research.uq.edu.au/partner-with-us">Industry research collaboration</a></li>
                         <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
                         <li><a href="https://research.uq.edu.au/research-infrastructure">Research facilities</a></li>
@@ -97,7 +97,7 @@
                         <li><a href="https://study.uq.edu.au/study-options/research">Future research students</a></li>
                         <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research/get-started">New research students</a></li>
                         <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research">Current research students</a></li>
-                        <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research students</a></li>
+                        <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research partners</a></li>
                       </ul>
                     </div>
                   </div>
@@ -105,10 +105,10 @@
               </div>
             </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au">Partners and Community</a>
+          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au">Partners and community</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
-                <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link">Partners and Community overview</a>
+                <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link">Partners and community overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Partner with us</div>
@@ -130,7 +130,7 @@
                         <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
                         <li><a href="https://atsis.uq.edu.au/">Indigenous engagement</a></li>
                         <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
-                        <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
+                        <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement and volunteering</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
                      </ul>
                     </div>
@@ -150,7 +150,7 @@
               </div>
             </div>
           </li>
-          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
+          <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/">About</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
                 <a href="https://about.uq.edu.au/" class="megamenu__overview-link">About overview</a>
@@ -218,7 +218,7 @@
               <li><a href="https://study.uq.edu.au/admissions">How to apply</a></li>
               <li><a href="https://scholarships.uq.edu.au/">Scholarships</a></li>
               <li><a href="https://my.uq.edu.au/starting-at-uq">Starting at UQ</a></li>
-              <li><a href="https://study.uq.edu.au/contact-us">Contact</a></li>
+              <li><a href="https://study.uq.edu.au/contact">Contact</a></li>
             </ul>
           </li>
           <li>
@@ -227,7 +227,7 @@
               <li><a href="https://study.uq.edu.au/why-choose-uq">Why choose UQ</a></li>
               <li><a href="https://employability.uq.edu.au/get-the-edge">Enhance your employability</a></li>
               <li><a href="https://study.uq.edu.au/university-life">Life at UQ and accommodation</a></li>
-              <li><a href="https://campuses.uq.edu.au/">Campuses, maps & transport</a></li>
+              <li><a href="https://campuses.uq.edu.au/">Campuses, maps and transport</a></li>
               <li><a href="https://study.uq.edu.au/events">Events for prospective students</a></li>
             </ul>
           </li>
@@ -239,7 +239,7 @@
               <li><a href="https://study.uq.edu.au/non-school-leavers">Non-school leavers</a></li>
               <li><a href="https://study.uq.edu.au/study-options/research">Postgraduate research (HDR) students</a></li>
               <li><a href="https://atsis.uq.edu.au/future-students">Aboriginal and Torres Strait Islander students</a></li>
-              <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study Abroad and exchange students</a></li>
+              <li><a href="https://study.uq.edu.au/study-options/study-abroad ">Study abroad and exchange students</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">Teachers and guidance counsellors</a></li>
               <li><a href="https://study.uq.edu.au/parents ">Parents and guardians</a></li>
               <li><a href="https://my.uq.edu.au/">Current students</a></li>
@@ -257,8 +257,8 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our research</a>
             <ul>
-              <li><a href="https://research.uq.edu.au/news/impact">Research impacts</a></li>
-              <li><a href="https://research.uq.edu.au/research-support">Reseach support, integrity and ethics</a></li>
+              <li><a href="https://research.uq.edu.au/news/impact">Research impact</a></li>
+              <li><a href="https://research.uq.edu.au/research-support">Research support, integrity and ethics</a></li>
               <li><a href="https://research.uq.edu.au/partner-with-us">Industry research collaboration</a></li>
               <li><a href="https://about.uq.edu.au/faculties-schools-institutes-centres">Faculties, schools, institutes and centres</a></li>
               <li><a href="https://research.uq.edu.au/research-infrastructure">Research facilities</a></li>
@@ -279,7 +279,7 @@
               <li><a href="https://study.uq.edu.au/study-options/research">Future research students</a></li>
               <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research/get-started">New research students</a></li>
               <li><a href="https://my.uq.edu.au/information-and-services/higher-degree-research">Current research students</a></li>
-              <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research students</a></li>
+              <li><a href="https://research.uq.edu.au/partner-with-us">Prospective research partners</a></li>
             </ul>
           </li>
         </ul>
@@ -307,7 +307,7 @@
               <li><a href="https://alumni.uq.edu.au/giving">Giving and philanthropy</a></li>
               <li><a href="https://atsis.uq.edu.au/">Indigenous engagement</a></li>
               <li><a href="https://study.uq.edu.au/teachers-guidance-counsellors ">High school engagement</a></li>
-              <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement & volunteering</a></li>
+              <li><a href="https://alumni.uq.edu.au/volunteer">Community engagement and volunteering</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops">Community facilities and services</a></li>
             </ul>
           </li>
