--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -119,7 +119,7 @@
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Staff</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
@@ -230,7 +230,7 @@
               <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
-            <a href="https://my.uq.edu.au/feedback?r=" class="uq-footer__link">Feedback</a>
+            <a href="https://my.uq.edu.au/feedback?r=https://uq.edu.au" class="uq-footer__link">Feedback</a>
           </li>
       </ul>
        </nav>
