--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -793,3 +793,69 @@ body.no-scroll {
 .uq-site-header__navigation-toggle {
   display: none;
 }
+
+// D7 overrides and hacks
+.d7-header.uq-header {
+  font-family: core.$roboto;
+
+  .uq-header__container,
+  .uq-header__nav-secondary-container,
+  .uq-header__search-container {
+    @media #{core.$screen-lg-up} {
+      max-width: 71.25rem;
+    }
+  }
+
+  .uq-header__nav-secondary-item a {
+    font-weight: 400;
+  }
+
+  .uq-header__logo {  
+    & img {
+      height: 32px !important;
+      max-width: none;
+
+      @media #{core.$screen-lg-up} {
+        height: 40px !important;
+      }
+    }
+  }
+
+  button.nav-primary__toggle {
+    margin: 0;
+    padding: 1.75rem 2rem 1.25rem 2rem;
+  }
+
+  button.nav-primary__toggle.nav-primary__search-toggle {
+    padding: 1rem 0 1rem 1.5rem;
+  }
+
+  .uq-header__search-container form {
+    margin: 0;
+  }
+
+  .uq-header__search-query-input {
+    height: auto;
+  }
+
+  .uq-header__search-query-submit {
+    background-color: transparent;
+  } 
+  
+  label.option.uq-header__search-label {
+    max-width: 100%;
+    font-weight: 400;
+    padding-top: 0;
+  }
+}
+
+.admin-menu {
+  .slide-menu {
+    top: 7.5rem;
+
+    @media #{core.$screen-md-up} {
+      top: 6.15rem;
+    }
+    
+  }
+}
